[package]
name = "microprofile"
version = "0.1.0"
authors = ["msiglreith <msiglreith@users.noreply.github.com>"]

[dependencies]
microprofile-sys = { path = "microprofile-sys", version = "0.1.0" }
libc = "0.2"
lazy_static = "0.1"

[dev-dependencies]
microprofile-plugin = { path = "microprofile-plugin" }

[features]
dx11 = ["microprofile-sys/dx11", "winapi"]
dx12 = ["microprofile-sys/dx12", "winapi"]
vulkan = ["microprofile-sys/vulkan", "vk-sys"]
gl = ["microprofile-sys/gl"]

[dependencies.winapi]
version = "0.2"
optional = true

[dependencies.vk-sys]
version = "0.2.1"
optional = true

[[example]]
name = "basic"
path = "examples/basic.rs"
